--- a/notebooks/prepare data.ipynb
+++ b/notebooks/prepare data.ipynb
@@ -2,11 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-05-25 14:06:42.078 WARNING streamlit.state.auto_session_state: Session state does not function when running a script without `streamlit run`\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unable to connect to the server.\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime\n",
     "\n",
